--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-.pygtex
-.aux
-.bbl
-.blg
-.log
-.lot
-.out
-.toc
-.lof
-.lol
-.txss2
+*.bbl
+*.aux
+*.blg
+*.lof
+*.log
+*.lol
+*.lot
+*.out
+LaTeX/body.pdf
+*.gz
+*.toc
